--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 				<nav>
 					<ul>
 						<li><a href="#">Home</a></li>
+						<li><a href="#">Designers</a></li>
 						<li><a href="#">Contact</a></li>
-						<li><a href="#">About</a></li>
 					</ul>
 				</nav>
 			</header>
